test/shouldfail/cast4.fluffy
export main
func main() : int:
	var l : int[10]
	var l2 : unsigned int* = &l
	return 0
